--- a/OS_ASSIGNMENT_1/with-bonus/loader/Makefile
+++ b/OS_ASSIGNMENT_1/with-bonus/loader/Makefile
@@ -1,1 +1,8 @@
+#Create lib_simpleloader.so from loader.c
+all:
+	gcc -shared -m32 -c -o lib_simpleloader.so loader.c
+	mv lib_simpleloader.so ../bin
 
+#Provide the command for cleanup
+clean:
+	-@rm -f *.o
