--- a/OS_ASSIGNMENT_1/with-bonus/Makefile
+++ b/OS_ASSIGNMENT_1/with-bonus/Makefile
@@ -1,1 +1,11 @@
+#invoke make inside following directories and in this order: loader, launch, fib
+#move the lib_simpleloader.so and launch binaries inside bin directory
+#Provide the command for cleanup
+all:
+	mkdir -p bin
+	$(MAKE) -C loader
+	$(MAKE) -C launcher
+	$(MAKE) -C test
 
+clean:
+	-@rm -f *.o
