--- a/OS_ASSIGNMENT_1/with-bonus/Makefile
+++ b/OS_ASSIGNMENT_1/with-bonus/Makefile
@@ -8,4 +8,8 @@ all:
 	$(MAKE) -C test
 
 clean:
+	$(MAKE) -C loader clean
+	$(MAKE) -C launcher clean
+	$(MAKE) -C test clean
+	rm -rf bin/*
 	-@rm -f *.o
