--- a/OS_ASSIGNMENT_1/with-bonus/launcher/Makefile
+++ b/OS_ASSIGNMENT_1/with-bonus/launcher/Makefile
@@ -3,7 +3,7 @@ all: ../bin/lib_simpleloader.so launch.o
 	gcc -Wall -fPIC -m32 -o output ../bin/lib_simpleloader.so launch.o
 	mv output ../bin
 
-launch.o: launch.C
+launch.o: launch.c
 	gcc -m32 -c launch.c
 
 #Provide the command for cleanup
